# distQR

./: .gitignore  CMakeLists.txt  README.md  README_zh.md
bench/: CMakeLists.txt  bench_cusolvermp_geqrf.cu  bench_cusolvermp_ormqr.cu  bench_dist_blocked_qr.cu  bench_dist_blocked_qr_col.cu  bench_dist_blocked_qr_col_blockcyclic.cu  bench_dist_blocked_qr_col_blockcyclic_pipeline.cu  bench_dist_orgqr_col_blockcyclic.cu  bench_nccl_broadcast_vs_hierarchical.cu  bench_qr.cu  bench_qr_max_fp32_size.cu  bench_tsqr.cu  find_static192_switch.sh
cmake/: FindNCCL.cmake
include/components/: distributed_blocked_qr.cuh  distributed_blocked_qr_col.cuh  distributed_blocked_qr_col_blockcyclic.cuh  distributed_blocked_qr_col_blockcyclic_pipeline.cuh  distributed_blocked_qr_row.cuh  distributed_explicit_q_from_wy_col_blockcyclic.cuh  panel_cusolver.cuh  panel_process.cuh  panel_tsqr.cuh  panel_wy_generate.cuh  persistent_wy_col_blockcyclic.cuh  resourse_initial.cuh
include/utils/: cublas_gemm_traits.cuh  matrix_helper.cuh  nvtx_range.cuh
test/: CMakeLists.txt  test_cusolvermp_geqrf_ormqr.cu  test_dist_blocked_qr.cu  test_dist_blocked_qr_col_blockcyclic_correctness.cu  test_dist_blocked_qr_col_correctness.cu  test_dist_blocked_qr_correctness.cu  test_matrix_helper.cu  test_nccl_init.cu  test_nvshmem_init.cu  test_single_card_qr.cu  test_spdlog.cu  test_tsqr.cu  test_tsqr_wy.cu
